# VMaFu

./: .gitignore  CMakeLists.txt  CMakelists.txt  Makefile  README.md  build.bat
benchmark/: main.cpp  readme.md
benchmark/python/: compare_configs.py  compare_three.py  export_to_excel.py  generate_data.py  plot_benchmark.py
demo/: main.cpp
include/: vmafu.hpp
include/vmafu/algorithms/inteq/: FredholmIntEq.hpp  IntEqFredholm.hpp  types.hpp
include/vmafu/algorithms/inteq/detail/: FredholmIntEq.ipp  IntEqFredholm.ipp
include/vmafu/core/: Function.hpp  Matrix.hpp  Vector.hpp  _Function.hpp  _Matrix.hpp  _Vector.hpp  _core.hpp  core.hpp
include/vmafu/core/detail/: Function.ipp  Matrix.ipp  Vector.ipp  _Function.ipp  _Matrix.ipp  _Vector.ipp  _core.ipp
include/vmafu/io/: _io.hpp  io.hpp
include/vmafu/io/detail/: _io.ipp
include/vmafu/io/formats/: _CsvFormat.hpp  _IFormat.hpp  _TxtFormat.hpp  formats.hpp
include/vmafu/io/formats/detail/: _CsvFormat.ipp  _IFormat.ipp  _TxtFormat.ipp
include/vmafu/io/parsers/: _CsvParser.hpp  _IParser.hpp  _TxtParser.hpp  parsers.hpp
include/vmafu/io/parsers/detail/: _CsvParser.ipp  _TxtParser.ipp
include/vmafu/io/serializers/: _ISerializer.hpp  _MatrixSerializer.hpp  _VectorSerializer.hpp  serializers.hpp
include/vmafu/io/serializers/detail/: _MatrixSerializer.ipp  _VectorSerializer.ipp
include/vmafu/linalg/: _linalg.hpp  _operations.hpp  linalg.hpp
include/vmafu/linalg/detail/: _operations.ipp
include/vmafu/parallel/: parallel.hpp
include/vmafu/parallel/mpi/: _mpi.hpp  mpi.hpp
include/vmafu/parallel/mpi/__internal/: internal.hpp
include/vmafu/utils/: _compat.hpp  utils.hpp
tests/: test-suite.cpp  test-utils.hpp
tests/vmafu/core/: test-matrix.cpp  test-vector.cpp
(+30 files in other folders)
